changed margin-top 15px; > margin: 15px 10px; for button, resulting spacing was correct

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -41,7 +41,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  margin-top: 15px;
+  margin: 15px 10px;
   height: 30px;
 }
 
